--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,7 @@
         android:layout_below="@id/buttonSum"
         android:layout_marginTop="30dp"
         android:textSize="18sp"
-        android:textColor="@android:color/black"
         android:layout_centerHorizontal="true"
+        android:textStyle="bold"
         android:text="@string/result_will_be_shown_here"/>
 </RelativeLayout>
